mobile layout bug fixing with help of min and max width in % value

--- a/styles/style.css
+++ b/styles/style.css
@@ -322,6 +322,9 @@ img {
 }
 
 .build-community-component > h2 {
+  min-width: 60%;
+  max-width: 70%;
+
   font-size: 2.8rem;
   font-weight: bold;
 
@@ -334,13 +337,14 @@ img {
   border: none;
   border-radius: 3rem;
 
-  padding: 1rem 2.8rem;
+  padding: 1.5rem 3.8rem;
 
   background-color: var(--clr-primary-pink);
   color: white;
 
   font-family: var(--ff-body);
   font-weight: var(--fw-600);
+  font-size: 1.3rem;
 
   box-shadow: 0px 5px 10px 0px var(--clr-primary-light-pink);
 }
